# Built-Static-Website-Boilerplate

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
content/: index.html
content/attributions/: ExampleLicense.md
content/images/favicon/: site.webmanifest
content/subdir/: inner.html
scripts/: __init__.py  config.py  run.py
scripts/models/: __init__.py  attrItem.py
scripts/tools/: __init__.py  build.py  open.py  sync.py
templates/: attributions.html  page.html  sitemap.xml
