[project]
name = "staticwebsitetemplate"
version = "0.1.0"
description = "Tools for building templated website layouts into a static website using Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "minify-html>=0.18.1",
    "tqdm>=4.67.1",
    "watchdog>=6.0.0",
]
